--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
     width: 100%;
     background: rgba(10, 25, 47, 0.8);
     backdrop-filter: blur(6px);
-    padding: 15px 0;
+    padding: 20px;
     z-index: 1000;
     box-shadow: 0 2px 8px rgba(0,0,0,0.3);
 }
@@ -61,8 +61,8 @@ header .container {
 
 .menu a {
     color: #eaf4f4;
-    text-decoration: none;
     transition: 0.3s;
+    font-size: 20px;
 }
 
 .menu a:hover {
@@ -119,6 +119,7 @@ header .container {
     height: 400px;
     border-radius: 50%;
     box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+    margin-bottom: 40px;
 }
 
 /* SEÇÕES */
