--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@
 
 body {
     font-family: 'Segoe UI', Roboto, sans-serif;
-
     color: #eaf4f4;
     background: linear-gradient(135deg, #0d1b2a, #1b263b, #1a3d3d);
     background-attachment: fixed;
     line-height: 1.6;
+    overflow-x: hidden
 }
 
 /* CONTAINER PADRÃO */
@@ -71,7 +71,7 @@ header .container {
 
 /* HERO */
 #hero {
-    height: 100vh;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
