--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background: linear-gradient(135deg, #0d1b2a, #1b263b, #1a3d3d);
     background-attachment: fixed;
     line-height: 1.6;
-    overflow-x: hidden
+    overflow-x: hidden;
 }
 
 /* CONTAINER PADRÃO */
@@ -54,6 +54,8 @@ header .container {
 .menu {
     display: flex;
     list-style: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.1rem;
 }
 
 .menu li {
