--- a/style.css
+++ b/style.css
@@ -65,7 +65,8 @@ header .container {
 .menu a {
     color: #eaf4f4;
     transition: 0.3s;
-    width: auto
+    width: auto;
+    text-decoration: none;
 }
 
 .menu a:hover {
@@ -121,7 +122,7 @@ header .container {
     width: 400px;
     height: 400px;
     border-radius: 50%;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+    box-shadow: 0 2px 5px #4ef0c3;
     margin-bottom: 40px;
 }
 
@@ -170,7 +171,7 @@ header .container {
     text-align: center;
     border-radius: 15px;
     transition: 0.3s;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    box-shadow: 0 2px 4px #4ef0c3;
 }
 
 .card i {
@@ -183,6 +184,7 @@ header .container {
     transform: translateY(-6px);
     background: rgba(78,240,195,0.1);
     box-shadow: 0 6px 15px rgba(0,0,0,0.3);
+    box-shadow: 0 2px 5px #4ef0c3;
 }
 
 /* CONTATO */
