--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
 
 
 
-
 /* CONTAINER PADRÃO */
 .container {
     max-width: 1100px;
@@ -151,7 +150,12 @@ header .container {
     margin-bottom: 50px;
     font-size: 2.2rem;
     color: #4ef0c3;
+    border-top: white solid 1px;
+    padding: 100px 0px;
+    margin-top: 50px;
 }
+    
+
 
 
 
@@ -177,6 +181,7 @@ header .container {
     word-spacing: -1px;
 } */
 
+
 #about {
     font-family: 'Fira Code', monospace; /* Fonte estilo código */
     padding: 20px;
@@ -193,7 +198,7 @@ header .container {
 #about .codigo {
     background: rgba(255, 255, 255, 0.05);
     padding: 15px;
-    border-radius: 5px;
+    border-radius: 30px;
     font-size: 28px;
     line-height: 1.5em;
     white-space: pre-line;
@@ -234,6 +239,7 @@ header .container {
     gap: 25px;
     margin-top: 40px;
     align-items: start;
+
 }
 
 .category-card {
@@ -417,8 +423,6 @@ footer {
 .back-to-top.visible {
     display: flex;
 }
-
-
 
 
 
