--- a/style.css
+++ b/style.css
@@ -147,11 +147,10 @@ header .container {
 
 .section h2 {
     text-align: center;
-    margin-bottom: 50px;
     font-size: 2.2rem;
     color: #4ef0c3;
     border-top: white solid 1px;
-    padding: 100px 0px;
+    padding: 100px 0px 20px 0px;
     margin-top: 50px;
 }
     
@@ -239,7 +238,6 @@ header .container {
     gap: 25px;
     margin-top: 40px;
     align-items: start;
-
 }
 
 .category-card {
@@ -248,7 +246,6 @@ header .container {
     text-align: center;
     border-radius: 15px;
     transition: 0.3s;
-    box-shadow: 0 1px 6px #4ef0c3;
     cursor: pointer;
     /* Alinha o conteúdo verticalmente */
     display: flex;
@@ -256,11 +253,11 @@ header .container {
     align-items: center;
     justify-content: center;
     font-size: 20px;
+    box-shadow: 0 2px 8px #ffffff;
 }
 
 .category-card:hover {
     transform: translateY(-6px);
-    background: rgba(78,240,195,0.1);
     box-shadow: 0 2px 8px #4ef0c3;
 }
 
@@ -301,7 +298,7 @@ header .container {
     align-items: center;
     gap: 10px;
     transition: 0.3s;
-    box-shadow: 0 2px 6px #4ef0c3;
+   
     margin: 20px;
 }
 
