--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ header .container {
     align-items: center;
     justify-content: center;
     font-size: 20px;
-    box-shadow: 0 2px 8px #ffffff;
+    box-shadow: 0 2px 8px #707070;
 }
 
 .category-card:hover {
