--- a/style.css
+++ b/style.css
@@ -201,6 +201,9 @@ header .container {
     font-size: 20px;
     line-height: 1.5em;
     white-space: pre-line;
+    word-spacing: -1px;
+    word-wrap: break-word;
+    text-align: justify;
 }
 
 #about .codigo .azul {
