--- a/style.css
+++ b/style.css
@@ -322,7 +322,13 @@ header .container {
 }
 
 
-
+/* PROJETOS */
+#projects p {
+    color: #ffd900;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 60px;
+}
 
 
 /* CONTATO */
