--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ header .container {
     list-style: none;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 1.1rem;
+    padding: 0;
+    margin: 0;
 }
 
 .menu li {
@@ -77,6 +79,41 @@ header .container {
 
 .menu a:hover {
     color: #4ef0c3;
+}
+
+@media (max-width: 768px) {
+    header .container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    .menu-toggle {
+        display: block;
+        background: transparent;
+        border: none;
+        color: #4ef0c3;
+        font-size: 1.1rem;
+        cursor: pointer;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        transition: 0.3s;
+        align-self: flex-end;
+    }
+    
+    .menu {
+        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+        margin-top: 15px;
+    }
+    
+    .menu.open {
+        display: flex;
+    }
+    
+    .menu li {
+        margin: 10px 0;
+    }
 }
 
 
