--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ header {
     backdrop-filter: blur(6px);
     /* z-index: 1000; */
     box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+    background-image: url(imagens/logofundo.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 header .container {
@@ -73,6 +77,7 @@ header .container {
     transition: 0.3s;
     width: auto;
     text-decoration: none;
+    text-align: left;
 }
 
 .menu a:hover {
@@ -134,7 +139,7 @@ header .container {
     text-align: center;
     background-size: cover;
     padding: 20px;
-    margin-top: 150px;
+    margin-top: 50px;
 }
 
 .hero-content h2 {
