--- a/style.css
+++ b/style.css
@@ -376,7 +376,7 @@ header .container {
     background: #1b263b; 
 }
 
-.project-card:hover {
+.project-card.is-active {
     transform: translateY(-8px); 
 }
 
@@ -387,7 +387,7 @@ header .container {
     transition: opacity 0.4s ease;
 }
 
-.project-card:hover img {
+.project-card.is-active img {
     opacity: 0.7; 
 }
 
@@ -430,7 +430,7 @@ header .container {
 }
 
 
-.project-card:hover .project-info {
+.project-card.is-active .project-info {
     opacity: 1; 
 }
 
