--- a/style.css
+++ b/style.css
@@ -255,6 +255,25 @@ header .container {
     }
 }
 
+@media (max-width: 768px) {
+
+    #about .codigo {
+        font-size: 15px;  
+        padding: 15px;
+        background: rgba(255, 255, 255, 0.05);
+        border-radius: 30px;
+        line-height: 1.5em;
+        white-space: pre-line;
+        word-spacing: -1px;
+        word-wrap: break-word;
+        text-align: justify;  
+    }
+
+    #about .codigo .roxo {    
+        margin-bottom: 8px; 
+    }
+
+}
 
 
 
@@ -354,7 +373,7 @@ header .container {
 
 /* PROJETOS */
 #projects p {
-    color: #fffb00;
+    color: #ffffff;
     text-align: center;
     font-size: 20px;
     margin-top: 60px;
