--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ header .container {
 
 /* HERO */
 #hero {
+    margin-top: 70px;
     height: 70vh;
     display: flex;
     justify-content: center;
@@ -389,7 +390,7 @@ header .container {
 .project-card {
     position: relative; 
     overflow: hidden; 
-    border-radius: 15px;
+    border-radius: 10px;
     box-shadow: 0 4px 15px rgba(0,0,0,0.4);
     transition: transform 0.3s ease-out;
     background: #1b263b; 
@@ -416,7 +417,6 @@ header .container {
     left: 0;
     width: 100%;
     height: 100%; 
-    padding: 12px;
     
     display: flex;
     flex-direction: column;
